--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   database:
-    image: "postgres:9.6"
+    image: "postgres:9.6.13"
     environment:
       - POSTGRES_USER=omero
       - POSTGRES_DB=omero
@@ -13,8 +13,9 @@ services:
       - "database:/var/lib/postgresql/data"
 
   omero:
-    image: openmicroscopy/omero-server:5.5.0
+    image: openmicroscopy/omero-server:5.5.1
     environment:
+      - CONFIG_omero_jvmcfg_heap__size=4g
       - CONFIG_omero_db_host=database
       - CONFIG_omero_db_user=omero
       - CONFIG_omero_db_pass=omero
@@ -28,11 +29,16 @@ services:
     volumes:
       - "omero:/OMERO"
       - "./custom_scripts:/opt/omero/server/OMERO.server/lib/scripts/custom_scripts:ro"
-
+      - "/media/nassauvia/1TB/Dundee/OMERO/data:/external_data/test:ro"
   web:
-    image: openmicroscopy/omero-web-standalone:5.5.0
+    image: openmicroscopy/omero-web-standalone:5.5.1
     environment:
       - OMEROHOST=omero
+      - CONFIG_omero_web_public_enabled=True
+      - CONFIG_omero_web_public_user=general_public
+      - CONFIG_omero_web_public_password=0p3nD@tA1sa//
+      - CONFIG_omero_web_public_url__filter=^/(webadmin/myphoto/|webclient/(?!(script_ui|ome_tiff|figure_script))|webgateway/(?!(archived_files|download_as))|iviewer|api)
+      - 'CONFIG_omero_web_login__redirect={"redirect": ["webindex"], "viewname": "load_template", "args":["userdata"], "query_string": "experimenter=-1"}'
     networks:
       - omero
     ports:
